Source/JavaScriptCore/bytecode/ValueProfile.cpp
@@ -61,15 +61,8 @@ void ValueProfile::computeStatistics(Statistics& statistics) const
 {
     for (unsigned i = 0; i < numberOfBuckets; ++i) {
         JSValue value = JSValue::decode(m_buckets[i]);
-        if (!value) {
-            WeakBucket weakBucket = m_weakBuckets[i];
-            if (!!weakBucket) {
-                statistics.samples++;
-                computeStatistics(weakBucket.getClassInfo(), statistics);
-            }
-            
+        if (!value)
             continue;
-        }
         
         statistics.samples++;
         
@@ -86,40 +79,17 @@ void ValueProfile::computeStatistics(Statistics& statistics) const
 
 PredictedType ValueProfile::computeUpdatedPrediction()
 {
-    ValueProfile::Statistics statistics;
-    computeStatistics(statistics);
-    
-    PredictedType prediction;
-    
-    if (!statistics.samples)
-        prediction = PredictNone;
-    else if (statistics.int32s == statistics.samples)
-        prediction = PredictInt32;
-    else if (statistics.doubles == statistics.samples)
-        prediction = PredictDouble;
-    else if (statistics.int32s + statistics.doubles == statistics.samples)
-        prediction = PredictNumber;
-    else if (statistics.arrays == statistics.samples)
-        prediction = PredictArray;
-    else if (statistics.finalObjects == statistics.samples)
-        prediction = PredictFinalObject;
-    else if (statistics.strings == statistics.samples)
-        prediction = PredictString;
-    else if (statistics.objects == statistics.samples)
-        prediction = PredictObjectOther;
-    else if (statistics.cells == statistics.samples)
-        prediction = PredictCellOther;
-    else if (statistics.booleans == statistics.samples)
-        prediction = PredictBoolean;
-    else
-        prediction = PredictOther;
-
-    m_numberOfSamplesInPrediction += statistics.samples;
-    mergePrediction(m_prediction, prediction);
     for (unsigned i = 0; i < numberOfBuckets; ++i) {
+        JSValue value = JSValue::decode(m_buckets[i]);
+        if (!value)
+            continue;
+        
+        m_numberOfSamplesInPrediction++;
+        mergePrediction(m_prediction, predictionFromValue(value));
+        
         m_buckets[i] = JSValue::encode(JSValue());
-        m_weakBuckets[i] = WeakBucket();
     }
+    
     return m_prediction;
 }
 #endif // ENABLE(VALUE_PROFILER)
